# njogush

./: .env.example  .gitignore  Makefile  README.md  WindowsInstaller_InnoScript.iss  compile.bat  compile.sh  compile_log.txt  daphne.bash  daphne.bat  daphne_njogush.service  daphne_runserver.py  hook-njogush.py  image_to_ascii.py  manage.py  myscript.py  njogush.spec  pyproject.toml
build_tool/: admin.py  apps.py  build_scripts.py  consumers.py  forms.py  models.py  pagination.py  routing.py  serializers.py  urls.py  view_drf.py  views.py
build_tool/migrations/: 0005_buildsession.py  0007_buildsession_date_modified.py  0008_step_is_parallel.py  0009_remove_step_is_parallel.py  0010_project_identifier.py  0011_auto_20240113_1352.py  0012_alter_project_identifier.py  0013_step_is_suspended.py  0014_buildsession_command_arguements.py  0015_rename_command_arguements_buildsession_command_arguments_and_more.py  0016_step_use_command_arguements.py  0017_alter_step_use_command_arguements.py
build_tool/templates/build_tool_vue/: .env  .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
chat/: consumers.py  routing.py  tests.py  urls.py  views.py
njogush/: asgi.py  context_processor.py  settings.py  static.py  urls.py  wsgi.py
user/: forms.py  models.py  serializer.py  urls.py  view_drf.py  views.py
user/templates/registration/: base.html  logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  (+1 more)
windows/: README.md
(+29 files in other folders)
